--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,18 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>MY APP</title>
+  <title>Star Wars Quotes</title>
 </head>
 <body>
   May Node and Express be with you.
 
   <ul class="quotes">
-  <% for(var i=0; i<quotes.length; i++) {%>
+    <% for(var i=0; i<quotes.length; i++) {%>
     <li class="quote">
       <span><%= quotes[i].name %></span>
       <span><%= quotes[i].quote %></span>
     </li>
-  <% } %>
+    <% } %>
   </ul>
 
   <form action="/quotes" method="POST">
@@ -21,5 +21,11 @@
     <input type="text" placeholder="quote" name="quote">
     <button type="submit">Submit</button>
   </form>
+
+  <div>
+    <h2>Replace last quote written by Master Yoda with a quote written by Darth Vadar</h2>
+    <button id="update"> Darth Vadar invades! </button>
+  </div>
+  <script src="main.js"></script>
 </body>
 </html>
